add products loading by ids
