# backend/services/products/docs/swagger.json
@@ -29,6 +29,12 @@
                         "description": "Offset",
                         "name": "offset",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "IDs of products, separated by comma. If not empty, then limit and offset will be ignored",
+                        "name": "ids",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -399,6 +405,9 @@
                 },
                 "image_preview": {
                     "type": "string"
+                },
+                "is_published": {
+                    "type": "boolean"
                 },
                 "name": {
                     "type": "string"
